--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theme-man",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.1",
-    "@types/react": "^16.7.6",
-    "react": "^16.6.3",
-    "typescript": "^3.2.0-dev.20181114"
+    "@types/react": "~16.4.18",
+    "react": "~16.4.2",
+    "typescript": "^3.1.6"
   }
 }
