--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "theme-man",
   "version": "0.1.4",
-  "main": "./lib/index.js",
-  "module": "./lib/index.js",
+  "main": "./lib/amd/index.js",
+  "module": "./lib/esm/index.js",
   "typings": "./lib/index.d.ts",
   "author": "Zhongliang Wang",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "rollup --config && tsc --emitDeclarationOnly"
   },
   "dependencies": {
     "lodash-es": "^4.17.11",
@@ -20,6 +20,10 @@
     "@types/lodash-es": "^4.17.1",
     "@types/react": "~16.4.18",
     "react": "~16.4.2",
+    "rollup": "^0.67.1",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-typescript": "^1.0.0",
     "typescript": "^3.1.6"
   }
 }
